src/objects/CO_Invoice_Item__c.object
<CustomObject>
    <fields>
        <fullName>CO_Invoice_Header__c</fullName>
        <label>CO Invoice Header</label>
        <referenceTo>CO_Invoice_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CO_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Kit Header</label>
        <referenceTo>CO_Kit_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Finance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Finance</label>
        <referenceTo>Deal_Finance__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Header_Status__c</fullName>
        <formula>CO_Invoice_Header__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Header Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Invoiceable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invoiceable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Category_Code__c</fullName>
        <formula>Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <formula>CO_Line_Item__r.Item_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <formula>TEXT(CO_Line_Item__r.Item_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>CO_Line_Item__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <formula>IF(
	NOT(ISBLANK(CO_Line_Item__c)),
	CO_Line_Item__r.Qty_Committed__c,
		IF(NOT(ISBLANK(CO_Kit_Header__c)),
			1,
			0
		)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Payment_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Payment Role</label>
        <referenceTo>SO_Payment_Role__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>CO Invoice Items</relationshipLabel>
        <relationshipName>CO_Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>CO Invoice Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COII-{0000000000}</displayFormat>
        <label>CO Invoice Items Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>